--- a/src/main/resources/templates/thymeleaf/info/Event_view.html
+++ b/src/main/resources/templates/thymeleaf/info/Event_view.html
@@ -140,7 +140,7 @@
 					<div class="text-end mt-3">
 					
 						<a th:href="@{'Event_write_update?num='+${view.getEvent_num()}}" class="btn btn-mainbg"> 수정하기</a>
-						<button class="btn btn-light text-end ">사진올리기</button>
+						<a th:href="@{'Event_write_delete?num='+${view.getEvent_num()}}" class="btn btn-nb"> 삭제하기</a>
 						<button class="btn btn-primary text-white ">로그인</button>
 					</div>
 					<a href="">test</a>
