--- a/src/main/resources/static/css/myBand.css
+++ b/src/main/resources/static/css/myBand.css
@@ -19,9 +19,17 @@ div.myBand_content{
 }
 
 /* col1 밴드 이미지, 제목 정보 영역 스타일 */
+div.myBand_content_col_titleBox{
+	margin-top : 20px;
+	width: 24%;
+	position : relative;
+	margin-right : 50px;
+}
 div.myBand_content_col_title{
-    width: 24%;
-    position : relative;
+	margin-top : 20px;
+    width: 23%;
+    position : fixed;
+    max-width: 260px;
 }
 div.myBand_title_img{
     width: 100%;
@@ -89,6 +97,10 @@ div.myBand_content_item_writer>img.myBand_content_item_writer_profile {
     border-radius: 20px;
     margin-right: 15px;
 }
+/* 밴드 게시글 내용 스타일 */
+div.myBand_content_item_content{
+	padding : 30px 0px;
+}
 div.myBand_content_item_writer_info>strong{
     font-size: 20px;
 }
@@ -98,4 +110,11 @@ div.myBand_content_item_writer_info>span{
     left : 80px;
     bottom : 0px;
     font-size: 15px;
+}
+
+div.myBand_content_item_content img{
+	display : block;
+	width: 100% !important;
+	border-radius: 10px;
+	margin-bottom : 10px;
 }
