--- a/src/main/resources/templates/thymeleaf/band/band.html
+++ b/src/main/resources/templates/thymeleaf/band/band.html
@@ -58,10 +58,10 @@
 				</div>
 
 				<!-- 가입한 밴드 출력 영역 / 반복-->
-				<div class="col-sm-4 join_band_item" th:each ="bandList:${bnadList}">
+				<div class="col-sm-4 join_band_item" th:each ="bandList:${bandList}">
 					<a  th:href="@{'myBand?bandUrl='+ ${bandList.getBand_code()}}" class="join_band_item_link">
 						<div class="join_band_item_imgBox">
-	                    	<img th:src="@{'/resources/band_thumbnail/'+ ${bandList.getBand_thumnail()}}" class="img-fluid join_band_item_img" alt="...">
+	                    	<img th:src="@{'img/uploadBandThumnail/'+ ${bandList.getBand_thumnail()}}" class=" join_band_item_img" alt="...">
 	                    </div>
 	                    <div class="join_band_item_text">
 	                        <strong th:text="${bandList.getBand_name()}">밴드 제목</strong>
