--- a/src/main/resources/templates/thymeleaf/band/bandFeedWrite.html
+++ b/src/main/resources/templates/thymeleaf/band/bandFeedWrite.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +14,7 @@
 <link rel="stylesheet" href="../css/bandFeedWrite.css">
 </head>
 <body>
+	<div th:replace="~{nav/nav::nav}"></div>
     <div class="bandFeedWrite_wrapper">
         <div class="bandFeedWrite_form">
             <form method="get" action="writeFeed">
@@ -23,7 +24,6 @@
             </form>
         </div>
     </div>
-    
     <script>
     $(document).ready(function() {
         $('#summernote').summernote({
