--- a/src/main/resources/templates/thymeleaf/info/Event_view.html
+++ b/src/main/resources/templates/thymeleaf/info/Event_view.html
@@ -1,55 +1,18 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Bootstrap demo</title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-	crossorigin="anonymous">
-<link rel="stylesheet" href="../css/common.css">
-<link rel="stylesheet" href="../css/info.css">
-<link rel="stylesheet" href="../css/nav.css">
-<link rel="stylesheet" href="../css/footer.css">
-<link rel="stylesheet" href="../css/map_mediaQuery.css">
+<div th:replace="~{head/head::head}"></div>
 
-<!-- 파비콘 영역 -->
-<link rel="apple-touch-icon" sizes="57x57"
-	href="../img/favicon/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60"
-	href="../img/favicon/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72"
-	href="../img/favicon/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76"
-	href="../img/favicon/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114"
-	href="../img/favicon/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120"
-	href="../img/favicon/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144"
-	href="../img/favicon/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152"
-	href="../img/favicon/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180"
-	href="../img/favicon/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"
-	href="../img/favicon/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32"
-	href="../img/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96"
-	href="../img/favicon/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16"
-	href="../img/favicon/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage"
-	content="../img/favicon/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
-</head>
+<script>
+	function deleteConfirm(id) {
+		if (confirm("해당 글을 정말 삭제하시겠습니까?") == true)
+			location.href = "/Event_write_delete?num=" + id;
+		else
+			event.stopProgation();
+		event.preventDefault();
+	}
+</script>
 <body>
-	<div th:replace="nav/nav::nav"></div>
+	<div th:replace="~{nav/nav::nav}"></div>
 	<!-- inner 페이지 -->
 	<div class="container inner mt-5">
 		<!-- 반복 되는 형태 -->
@@ -72,7 +35,7 @@
 					들어가는 곳</p>
 
 
-				<div class="map_mapSection">
+				<div class="map_mapSection mx-auto">
 					<!-- 지도를 표시할 div 입니다 -->
 					<div id="map" style="width: 500px; height: 300px"
 						class="mx-auto my-3"></div>
@@ -140,7 +103,8 @@
 					<div class="text-end mt-3">
 					
 						<a th:href="@{'Event_write_update?num='+${view.getEvent_num()}}" class="btn btn-mainbg"> 수정하기</a>
-						<a th:href="@{'Event_write_delete?num='+${view.getEvent_num()}}" class="btn btn-nb"> 삭제하기</a>
+						
+						<a href="#" class="btn btn-nb" th:onclick="'deleteConfirm(\'' + ${view.getEvent_num()} + '\')'">글 삭제</a>
 						<button class="btn btn-primary text-white ">로그인</button>
 					</div>
 					<a href="">test</a>
@@ -148,14 +112,10 @@
 			</div>
 		</div>
 	</div>
-	<div th:replace="footer/footer::footer"></div>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-		crossorigin="anonymous"></script>
+	<div th:replace="~{footer/footer::footer}"></div>
 
-	<script type="text/javascript"
-		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	5bceb465ea8b2b4878f8bec64e4f6d05"></script>
+	
+		
 		
 		<!-- 카카오 지도 API 활용 스크립트 -->
 	<script th:inline="javascript">
@@ -209,5 +169,6 @@
 			}
 		});
 	</script>
+	
 </body>
 </html>
