--- a/src/main/resources/templates/thymeleaf/aicc/aicc.html
+++ b/src/main/resources/templates/thymeleaf/aicc/aicc.html
@@ -1,22 +1,8 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Carrier AiSearch</title>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-            crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/ai.css">
-    <link rel="stylesheet" href="../css/nav.css">
-<link rel="stylesheet" href="../css/search.css">
-<link rel="stylesheet" href="../css/footer.css">
-</head>
+<div th:replace="~{head/head::head}"></div>
 <body>
-<div th:replace="nav/nav::nav"></div>
+<div th:replace="~{nav/nav::nav}"></div>
 
 <div id="ai" class="container-fluid px-0">
     <div id="ai-cok-carousel" class="carousel slide"
