--- a/src/main/resources/templates/thymeleaf/feed/feed_show.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed_show.html
@@ -1,21 +1,11 @@
 <!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>feed show page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../static/css/common.css">
-    <link rel="stylesheet" href="../../static/css/feed_show.css">
-
-    <!-- fontawesome icon -->
-    <script src="https://kit.fontawesome.com/ebccd8f794.js" crossorigin="anonymous"></script>
-</head>
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
+<div th:replace="~{head/head::head}"></div>
 <body>
 <h1>NAAAAAAAAAAAAAAAAAAAAAAAANNNNAAAVVV</h1>
 
 <section id="feed-show" class="container-fluid p-0">
+<div th:replace="~{nav/nav::nav}"></div>
     <div class="container mt-5">
         <div class="row">
             <!--feed top-->
@@ -144,8 +134,6 @@
 </section>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+<div th:replace="~{footer/footer::footer}"></div>
 </body>
 </html>
