--- a/src/main/resources/templates/thymeleaf/home/home.html
+++ b/src/main/resources/templates/thymeleaf/home/home.html
@@ -1,48 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/home">
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>캐리어</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-	<!--파비콘영역-->
-	<link rel="apple-touch-icon" sizes="57x57" href="../img/favicon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="../img/favicon/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="../img/favicon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="../img/favicon/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="../img/favicon/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="../img/favicon/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="../img/favicon/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="../img/favicon/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="../img/favicon/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-	<link rel="manifest" href="/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="../img/favicon/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
-	<!--파비콘영역 끝-->
-	<link rel="stylesheet" href="../css/common.css">
-	<link rel="stylesheet" href="../css/nav.css">
-	<link rel="stylesheet" href="../css/feed.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.css" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.autoplay.css" />
-	<link rel="stylesheet" href="../css/home.css">
-	<link rel="stylesheet" href="../css/search.css">
-	<link rel="stylesheet" href="../css/footer.css">
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<script src="../js/home.js"></script>
-	
-	<!-- fontawesome icon -->
-    <script src="https://kit.fontawesome.com/ebccd8f794.js" crossorigin="anonymous"></script>
-</head>
-
+<div th:replace="~{head/head::head}"></div>
 <body>
-	<div th:replace="nav/nav::nav"></div>
+	<div th:replace="~{nav/nav::nav}"></div>
 	<div class="home_wrapper">
 
 		<div class="home_carousel container-fluid px-0">
@@ -804,14 +765,11 @@
 
 	</div> <!-- home_wrapper -->
 	<!--footer-->
-	<div th:replace="footer/footer::footer"></div>
+	<div th:replace="~{footer/footer::footer}"></div>
 
 
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-		crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	
 	<script>
 		$(document).ready(function () {//시간나면 수정
 			$(".carousel-inner").on("mousedown", function (e) {
