--- a/src/main/resources/templates/thymeleaf/info/Event_write_update.html
+++ b/src/main/resources/templates/thymeleaf/info/Event_write_update.html
@@ -1,21 +1,9 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>SIGN UP</title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-	crossorigin="anonymous">
-<link rel="stylesheet" href="../css/common.css">
-<link rel="stylesheet" href="../css/nav.css">
-<link rel="stylesheet" href="../css/footer.css">
-</head>
+<div th:replace="~{head/head::head}"></div>
 
 <body>
-	<div th:replace="nav/nav::nav"></div>
+	<div th:replace="~{nav/nav::nav}"></div>
 	<!-- addMember 페이지 -->
 	<div class="container addMember_wrap">
 		<div class="row mb-5">
@@ -237,15 +225,8 @@
 		</div>
 	</div>
 	<!--footer-->
-	<div th:replace="footer/footer::footer"></div>
+	<div th:replace="~{footer/footer::footer}"></div>
 
-
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-		crossorigin="anonymous"></script>
-
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 	<script>
 		function readURL(input) {
@@ -263,15 +244,26 @@
 	<script th:inline="javascript">
     /*<![CDATA[*/
     var eventCategory = /*[[${formData.Event_category}]]*/ '';
+    var eventArea = /*[[${formData.Event_area}]]*/ '';
     $(function() {
         init();
 
         function init() {
             setComboMailValue(eventCategory);
+            setComboAreaValue(eventArea);
         }
         
         function setComboMailValue(val) {
             var selectEventCategory = document.getElementById('Event_category');
+            for (i = 0, j = selectEventCategory.length; i < j; i++) {
+                if (selectEventCategory.options[i].value == val) {
+                    selectEventCategory.options[i].selected = true;
+                    break;
+                }
+            }
+        }
+        function setComboAreaValue(val) {
+            var selectEventCategory = document.getElementById('Event_area');
             for (i = 0, j = selectEventCategory.length; i < j; i++) {
                 if (selectEventCategory.options[i].value == val) {
                     selectEventCategory.options[i].selected = true;
