--- a/src/main/resources/templates/thymeleaf/inner/inner.html
+++ b/src/main/resources/templates/thymeleaf/inner/inner.html
@@ -1,12 +1,8 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  </head>
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
+  <div th:replace="~{head/head::head}"></div>
   <body>
+  <div th:replace="~{nav/nav::nav}"></div>
     <h1>세부 페이지</h1>
     <!-- inner 페이지 -->
     <div class="container inner">
@@ -99,6 +95,6 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <div th:replace="~{footer/footer::footer}"></div>
   </body>
 </html>
