--- a/src/main/resources/templates/thymeleaf/map/map.html
+++ b/src/main/resources/templates/thymeleaf/map/map.html
@@ -1,20 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>캐리어</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/map.css">
-    <link rel="stylesheet" href="../css/map_mediaQuery.css">
-    <script src="../js/map.js"></script>
-    
-</head>
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
+<div th:replace="~{head/head::head}"></div>
 
 <body>
+<div th:replace="~{nav/nav::nav}"></div>
     <div class="map_wrapp">
         <!-- 맵 컨텐츠 전체를 감싸는 영역  -->
         <div class="map_all_contentBox">
@@ -85,11 +74,7 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
-
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	5bceb465ea8b2b4878f8bec64e4f6d05"></script>
+<div th:replace="~{footer/footer::footer}"></div>
     <script>
         var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
             mapOption = { 
