--- a/src/main/resources/templates/thymeleaf/pak/pak.html
+++ b/src/main/resources/templates/thymeleaf/pak/pak.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 
+<div th:replace="~{head/head::head}"></div>
+<body>
+<div th:replace="~{nav/nav::nav}"></div>
+
+<div th:replace="~{footer/footer::footer}"></div>
 </body>
 </html>
