24-02-16 | 박검지 | 마이페이지 회원수정 완료

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -580,7 +580,7 @@ footer p {
   	}
 
   	div.home_carousel {
-  		background-color: rgb(241, 239, 242);
+  		background-color: var(--mainbg);
   		position: static;
   		padding-bottom: 40px;
   	}
