--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -14,7 +14,8 @@
 /*<<<<<<<<<<<<<<<<<<<<<<<<<< [좌] <<<<<<<<<<<<<<<<<<<<<<<<<<<<<*/
 /* sticky 상단 영역 */
 #mypage-L.sticky-md-top{
-    top: 11px;
+    top: 107px;
+    z-index: 0;
 }
 
 /* 메뉴 아이콘 */
