--- a/src/main/resources/templates/nav/nav.html
+++ b/src/main/resources/templates/nav/nav.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <nav class="mt-3 mb-0 navbar navbar-expand-md d-flex justify-content-center sticky-top bg-white shadow-sm" th:fragment="nav">
-  <div class="row container-fluid">
+  <div class="row container-fluid px-3">
     <!-- Logo 좌측 -->
  <a class="col navbar-brand" href="home"> <img src="../img/nav/carrier.jpg" alt="" class="mb-2" style="width: 100px;"></a>
     <!--M nav btn-->
@@ -19,11 +19,11 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <!-- nav content -->
-    <div class="col-10 d-lg-flex justify-content-between justify-content-lg-end mx-auto collapse navbar-collapse"
+    <div class="col-8 d-lg-flex justify-content-between justify-content-lg-end mx-auto collapse navbar-collapse"
          id="navbarSupportedContent">
       <!-- nav 중앙 -->
-      <div class="col px-md-4">
-        <ul class="px-5 mb-0 navbar-nav justify-content-around mb-lg-0 f17">
+      <div class="col-6 flex-grow-1 px-lg-5">
+        <ul class="px-lg-5 mb-0 navbar-nav justify-content-around mb-lg-0 f17">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="home">홈</a>
           </li>
@@ -45,9 +45,9 @@
         </ul>
       </div>
       <!-- nav 우측 -->
-      <div class="col-lg-4 nav-right me-3 d-flex align-items-center p-0">
+      <div class="col nav-right d-flex align-items-center p-0">
         <!-- lg 화면 이상에서 보일 영역 -->
-        <div class="col d-none d-lg-flex d-flex align-items-center p-0">
+        <div class="col-12 d-none d-xl-flex d-flex justify-content-around align-items-center p-0">
           <!-- 서치 영역-->
           <div class="col-10 float-end nav-search-form">
             <form class="d-flex align-items-center" role="search">
@@ -55,26 +55,37 @@
               <button class="nav-right-btn navbar-search-lg" type="submit">Search</button>
             </form>
           </div>
-          <!-- 로그인 / 마이페이지 영역 -->
+          <!----- 로그인 / 마이페이지 영역 ----->
+          <!-- 로그인 -->
           <th:block th:if="${session.Member_Id == null}">
-	          <a th:href="@{login}" class="float-end nav-right-btn navbar-user ms-3 ms-auto">로그인</a>
+	          <a th:href="@{login}" class="float-end navbar-user nav-right-btn nav-right-btn-img">로그인</a>
           </th:block>
+          <!-- 마이페이지 -->
           <th:block th:unless="${session.Member_Id == null}">
-	          <a th:href="@{mypage}" class="float-end nav-right-btn ms-3 ms-auto">
-	          	<img th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}" class="w-25 rounded-circle img-fluid"
-                         alt="...">
+	          <a th:href="@{'mypage?id='+${session.Member_Id}}" class="nav-right-btn">
+	          	<img th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}" class="rounded-circle img-fluid nav-right-btn-img float-end" alt="...">
 	          </a>
           </th:block>
         </div>
         <!-- md 화면에서만 보일 영역 -->
-        <div class="col d-none d-md-block d-lg-none">
-        	<th:block th:if="${session.Member_Id == null}">
-	          <a th:href="@{login}" class="float-end nav-right-btn navbar-user">로그인</a>
-          </th:block>
-          <th:block th:unless="${session.Member_Id == null}">
-	          <a th:href="@{mypage}" class="float-end nav-right-btn navbar-user">마이페이지</a>
-          </th:block>
-          <a href="#" class="float-end nav-right-btn navbar-search-md">search</a>
+        	<div class="d-flex">
+        <div class="col d-none d-md-block d-xl-none">
+        	    <!----- 로그인 / 마이페이지 영역 ----->
+          		<!-- 로그인 -->
+	        	<th:block th:if="${session.Member_Id == null}">
+		          <a th:href="@{login}" class="float-end nav-right-btn nav-right-btn-img navbar-user">로그인</a>
+	          	</th:block>
+	          	<!-- 마이페이지 -->
+	          	<th:block th:unless="${session.Member_Id == null}">
+		          <a th:href="@{'mypage?id='+${session.Member_Id}}" class="float-end nav-right-btn">
+		          	<img th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}" class="rounded-circle img-fluid nav-right-btn-img float-end" alt="...">
+		          </a>
+	          	</th:block>
+	          	<!-- 검색 -->
+	          	<a href="#" class="float-end nav-right-btn">
+	          		<span class="navbar-search-md nav-right-btn-img me-2"></span>
+	          	</a>
+        	</div>
         </div>
       </div>
     </div>
