--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -35,7 +35,7 @@ header {
 .navbar {
   width: 100%;
   height: 60px;
-  max-width: 1400px;
+ /*  max-width: 1400px; */
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
