--- a/src/main/resources/static/css/myBand.css
+++ b/src/main/resources/static/css/myBand.css
@@ -21,15 +21,12 @@ div.myBand_content{
 /* col1 밴드 이미지, 제목 정보 영역 스타일 */
 div.myBand_content_col_titleBox{
 	margin-top : 20px;
-	width: 24%;
-	position : relative;
-	margin-right : 50px;
 }
 div.myBand_content_col_title{
 	margin-top : 20px;
-    width: 23%;
-    position : fixed;
-    max-width: 260px;
+    width: 100%;
+    top : 100px;
+    z-index: 1000;
 }
 div.myBand_title_img{
     width: 100%;
@@ -61,8 +58,6 @@ div.myBand_write_btn span{
 
 /* col2 밴드 게시글 영역 */
 div.myBand_content_col_content{
-    display: inline-block;
-    width: 48%;
     position : relative;
 }
 /* 글 내용 검색 스타일 */
@@ -94,21 +89,22 @@ div.myBand_content_item_writer{
     display: flex;
 }
 div.myBand_content_item_writer>img.myBand_content_item_writer_profile {
+	width: 80px;
+	height: 80px;
     border-radius: 20px;
-    margin-right: 15px;
+    margin-right: 20px;
 }
 /* 밴드 게시글 내용 스타일 */
 div.myBand_content_item_content{
 	padding : 30px 0px;
 }
 div.myBand_content_item_writer_info>strong{
+	display: block;
     font-size: 20px;
+    margin-bottom : 25px;
 }
 div.myBand_content_item_writer_info>span{
-    display: inline-block;
-    position : absolute;
-    left : 80px;
-    bottom : 0px;
+    display: block;
     font-size: 15px;
 }
 
