--- a/src/main/resources/templates/thymeleaf/band/myBand.html
+++ b/src/main/resources/templates/thymeleaf/band/myBand.html
@@ -18,10 +18,10 @@
 		
         <!-- myBandContent -->
         <div class="myBand_content">
-            <div class="container myBand_contentBox px-0 d-flex justify-content-start">
+            <div class="container myBand_contentBox px-0 d-flex flex-md-column flex-lg-row ">
                 <!-- col1 밴드 이미지, 제목 정보 영역 -->
-				<div class="myBand_content_col_titleBox">
-					<div class="myBand_content_col_title">
+				<div class="col-12 col-lg-3 myBand_content_col_titleBox">
+					<div class="myBand_content_col_title sticky-md-top flex-column mr-md-5">
 						<div class="myBand_title_img">
 							<img
 								th:src="@{'../img/uploadBandThumnail/'+ ${myBandList.getBand_thumnail()}}"
@@ -49,14 +49,14 @@
 
 
 				<!-- col2 밴드 게시글 영역 -->
-                <div class="myBand_content_col_content" >
-                    <div class="myBand_content_search">
+                <div class="col-12 col-lg-7 myBand_content_col_content" >
+                   <!--  <div class="myBand_content_search">
                         <span>글 내용, #태그, @작성자 검색</span>
                         <img class="search_img" src="../img/common/btn_header_search.png" alt="">
-                        <!-- <span th:text="${feedwriterImg.getMember_profileimage()}"></span> -->
-                    </div>
+                        <span th:text="${feedwriterImg.getMember_profileimage()}"></span>
+                    </div> -->
 
-                    <div class="myBand_content_item" th:each="myBandFeedList:${myBandFeedList}">
+                    <div class="myBand_content_item " th:each="myBandFeedList:${myBandFeedList}">
                         <div class="myBand_content_item_writer">
                             <img class="myBand_content_item_writer_profile" th:src="@{'../img/member_thumbnail/'+${myBandFeedList.getMember_profileimage()}}"  alt="#">
                             <div class="myBand_content_item_writer_info">
@@ -96,11 +96,9 @@
         </div>
 
     </div>
-<<<<<<< HEAD
     <div th:replace="~{footer/footer::footer}"></div>
-=======
+
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
->>>>>>> branch 'develope' of https://github.com/Carri-er/test.git
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     
     <script>
