--- a/src/main/resources/templates/head/head.html
+++ b/src/main/resources/templates/head/head.html
@@ -25,7 +25,6 @@
 	<meta name="theme-color" content="#ffffff">
 	<!--파비콘영역 끝-->
 	<!--css파일들-->
-	<link rel="stylesheet" href="../css/ai.css">
 	<link rel="stylesheet" href="../css/band_mediaQuery.css">
 	<link rel="stylesheet" href="../css/band.css">
 	<link rel="stylesheet" href="../css/bandFeedWrite.css">
@@ -63,5 +62,7 @@
 	href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 	<!-- fontawesome icon -->
     <script src="https://kit.fontawesome.com/ebccd8f794.js" crossorigin="anonymous"></script>
+     <!-- swiper -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 </html>
