--- a/src/main/resources/templates/thymeleaf/info/Event_view.html
+++ b/src/main/resources/templates/thymeleaf/info/Event_view.html
@@ -18,7 +18,7 @@
 		<!-- 반복 되는 형태 -->
 		<div class="row mb-5">
 			<div class="col text-center">
-				<h3 class="mb-3">
+				<h3 class="my-5">
 					[<span th:text="${view.getEvent_category()}">버튼</span>] <span
 						th:text="${view.getEvent_title()}"></span>
 				</h3>
@@ -27,20 +27,20 @@
 				<!-- <img class="img-fluid" src="https://korean.visitkorea.or.kr/resources/images/sub/bg_pic_reg.jpg" alt=""> -->
 			</div>
 		</div>
-		<div class="row px-xl-5">
-			<div class="col px-xl-5">
-				<h4 class="">상세 정보</h4>
+		<div class="row px-xl-5 justify-content-center">
+			<div class="col px-xl-5 my-5">
+				<h4 class="mt-5 mb-3">상세 정보</h4>
 				<hr>
 				<p class="px-lg-5 textcontent" th:text="${view.getEvent_content()}">내용
 					들어가는 곳</p>
 
 
-				<div class="map_mapSection mx-auto">
+				<div class="map_mapSection w-100 my-5">
 					<!-- 지도를 표시할 div 입니다 -->
 					<div id="map" style="width: 500px; height: 300px"
-						class="mx-auto my-3"></div>
+						class=" mx-auto"></div>
 				</div>
-				<div class="row d-flex my-4">
+				<div class="row d-flex my-4 justify-content-center">
 					<div class="col-3 col-lg-2">
 						<ul>
 							<li>안내</li>
@@ -48,7 +48,7 @@
 							<li>주차</li>
 						</ul>
 					</div>
-					<div class="col-9 col-lg-3">
+					<div class="col-7 col-lg-3">
 						<ul class="list-unstyled">
 							<li th:text="${view.getEvent_phone()}">041 852 4230</li>
 							<li th:text="${view.getEvent_time()}"><span
@@ -65,23 +65,23 @@
 							<li>휴일</li>
 						</ul>
 					</div>
-					<div class="col-9 col-lg-5 ">
+					<div class="col-7 col-lg-4">
 						<ul class="list-unstyled">
 							<li th:text="${view.getEvent_address()}">충청남도 공주시 계룡면 신원사동길1</li>
 							<li th:text="${view.getEvent_rest()}">연중무휴</li>
 						</ul>
 					</div>
 				</div>
-				<div class="row mb-5 px-md-5">
-					<div class="co mx-auto mx-lg-5 px-lg-5">
-						<button class="btn btn-light" th:text="${view.getEvent_tag()}">버튼</button>
-						<button class="btn btn-light" th:text="${view.getEvent_tag2()}">버튼</button>
-						<button class="btn btn-light" th:text="${view.getEvent_tag3()}">버튼</button>
-						<button class="btn btn-light" th:text="${view.getEvent_tag4()}">버튼</button>
-						<button class="btn btn-light" th:text="${view.getEvent_tag5()}">버튼</button>
-						<button class="btn btn-light" th:text="${view.getEvent_area()}">버튼</button>
-						<button class="btn btn-light" th:text="${view.getEvent_area2()}">버튼</button>
-						<button class="btn btn-light" th:text="${view.getEvent_parking()}">버튼</button>
+				<div class="row mb-5 px-md-5 justify-content-center">
+					<div class="col-12 col-lg-8 ">
+						<button class="btn btn-pink" th:text="${view.getEvent_tag()}">버튼</button>
+						<button class="btn btn-pink" th:text="${view.getEvent_tag2()}">버튼</button>
+						<button class="btn btn-pink" th:text="${view.getEvent_tag3()}">버튼</button>
+						<button class="btn btn-pink" th:text="${view.getEvent_tag4()}">버튼</button>
+						<button class="btn btn-pink" th:text="${view.getEvent_tag5()}">버튼</button>
+						<button class="btn btn-pink" th:text="${view.getEvent_area()}">버튼</button>
+						<button class="btn btn-pink" th:text="${view.getEvent_area2()}">버튼</button>
+						<button class="btn btn-pink" th:text="${view.getEvent_parking()}">버튼</button>
 
 					</div>
 				</div>
@@ -96,21 +96,43 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col p-3">
+			<div class="col-8 p-3 mx-auto">
 				<b>여행톡 0</b>
-				<div class="border">
-					<textarea class="form-control" id="" cols="30" rows="10"></textarea>
+				<form action="Event_comment" method="post">
+				<div class="">
+					<textarea class="form-control" id="" cols="30" rows="10" name="Eventcomment_content"></textarea>
+					<input type="hidden" name="Event_num" th:value="${view.getEvent_num()}"/>
+					<input type="hidden" name="memberId" th:value="${session.Member_Id}"/>
 					<div class="text-end mt-3">
-					
-						<a th:href="@{'Event_write_update?num='+${view.getEvent_num()}}" class="btn btn-mainbg"> 수정하기</a>
+						<th:block th:if="${session.Member_Id=='admin'}">
+						<a th:href="@{'Event_write_update?num='+${view.getEvent_num()}}" class="btn btn-pink"> 수정하기</a>
 						
-						<a href="#" class="btn btn-nb" th:onclick="'deleteConfirm(\'' + ${view.getEvent_num()} + '\')'">글 삭제</a>
-						<button class="btn btn-primary text-white ">로그인</button>
+						<a href="#" class="btn btn-skyb" th:onclick="'deleteConfirm(\'' + ${view.getEvent_num()} + '\')'">글 삭제</a>
+						</th:block>
+						
+						
 					</div>
-					<a href="">test</a>
 				</div>
+				<div class="col text-end">
+						<button class="btn btn-mainbg ">댓글달기</button>
+					</div>
+					</form>
+					<div th:each="commentlist:${commentlist}" class="rounded-4 border row my-2 ">
+					<div class="col-2 px-2 pt-3 border-end text-center">
+						<img th:src="@{'../img/member_thumbnail/'+${commentlist.getMember_profileimage()}}" style="width:80px;"height="80px;"/>
+						<p th:text="${commentlist.getMember_Id()}" class="btn btn-light my-2"></p>
+					</div>
+					<div class="col-8 mt-5 px-4">
+					<p th:text="${commentlist.getEventcomment_content()}"></p>
+					<p th:text="${commentlist.getEventcomment_upload()}"></p>
+					</div>
+					<div class="col-2 mt-5 text-end">
+					<a href="" class="btn btn-pink">삭제</a>
+					</div>
+					</div>
 			</div>
 		</div>
+		
 	</div>
 	<div th:replace="~{footer/footer::footer}"></div>
 
